--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                             <a href=""><button id="start">Get Started!</button></a>
                         </div>
                     </div>
-                    <div class="col-lg-5 col-md-8 col-sm-12 text-start order-1">
-                        <img src="./Assets/Images/shokran.png" alt="" class="img-fluid">
+                    <div class="col-lg-5 col-md-8 col-sm-10 text-start order-1">
+                        <img src="./Assets/Images/shokran.png" alt="" class="img-fluid" id="shokran">
                     </div>
                 </div>
             </div>
