--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-8 col-sm-10 text-start order-1">
-                        <img src="./Assets/Images/shokran.png" alt="" class="img-fluid" id="shokran">
+                        <img src="./Assets/Images/shokran.png" alt="" class="img-fluid" id="">
                     </div>
                 </div>
             </div>
@@ -333,11 +333,15 @@
             </div>
         </div>
     </div>
+
+    <!-- ===============Footer===================================== -->
+
     <footer>
         <div class="container">
             <div class="row mt-5">
-                <div class="col-9 m-auto mt-5 d-flex flex-wrap justify-content-between align-items-center">
-                    <div class="col-4 mb-5">
+                <div
+                    class="col-lg-10 col-md-12 col-sm-12  mt-5 d-flex flex-wrap justify-content-between align-items-center ">
+                    <div class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="section">
                             <p class="mb-0">&copy <b>Shokran</b>. <b>A</b>ll Rights Reserved</p>
                         </div>
@@ -345,7 +349,7 @@
                         <div class="section">Location: 38th EL-kordy st , new fostat Cairo Egypt
                         </div>
                     </div>
-                    <div class="col-4 mb-5">
+                    <div class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="section">
                             <p class="mb-0">support@shokranegypt.com sales@shokranegypt.com marketing@shokranegypt.com
                             </p>
